--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gqlPrac1",
   "version": "1.0.0",
   "dependencies": {
-    "apollo-server": "^3.1.2"
+    "apollo-server": "^3.1.2",
+    "graphql": "^15.5.1"
   },
   "devDependencies": {
     "@prisma/client": "^2.29.1",
